--- a/vignettes/gisfin_tutorial.Rmd
+++ b/vignettes/gisfin_tutorial.Rmd
@@ -7,7 +7,7 @@
 ```{r setup, include=FALSE}
 # Global options
 library(knitr)
-opts_chunk$set(fig.path="fig/")
+opts_chunk$set(fig.path="fig/", eval = FALSE)
 ```
 
 ```{r knit, eval=FALSE, echo=FALSE}
@@ -395,7 +395,7 @@ unlist(gc4[1:2])
 Geographic coordinates for a given IP-address from
 [Data Science Toolkit](http://www.datasciencetoolkit.org/):
 
-```{r iplocation, message=FALSE, eval=TRUE}
+```{r iplocation, message=FALSE, eval=FALSE}
 ip_location("137.224.252.10")
 ```
 
@@ -419,7 +419,7 @@ if (length(layers) > 0) layers
 Get population density in year 2005 on a 5 km x 5 km grid, convert to 
 RasterStack object and plot on log scale.
 
-```{r population-density-plot, message=FALSE, warning=FALSE, results='hide', eval=TRUE}
+```{r population-density-plot, message=FALSE, warning=FALSE, results='hide', eval=FALSE}
 library(raster)
 request$getPopulation(layers[11])
 client <- gisfin::GeoStatFiWFSClient$new(request)
